<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dani.project5b.Like">

            <TextView
                android:id="@+id/label_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_id"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/label_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreLenguaje"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/label_id"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:id="@+id/nombre"
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_nombre"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />


            <Button
                android:id="@+id/boton_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:layout_alignTop="@+id/boton_guardar"
                android:layout_toRightOf="@+id/boton_ver"
                android:layout_toEndOf="@+id/boton_ver" />
            <Button
                android:id="@+id/boton_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/boton_cancelar"
                android:layout_toEndOf="@+id/boton_cancelar"
                android:layout_marginLeft="44dp"
                android:layout_marginStart="44dp"
                android:layout_marginBottom="53dp" />


        <Button
            android:id="@+id/boton_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver"
            android:layout_centerVertical="true"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:id="@+id/boton_nueva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nueva"
            android:layout_above="@+id/boton_ver"

            android:layout_alignRight="@+id/label_nombre"
            android:layout_alignEnd="@+id/label_nombre" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/boton_cancelar"
        android:layout_alignLeft="@+id/nombre"
        android:layout_alignStart="@+id/nombre" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/foto"
        android:layout_alignTop="@+id/boton_nueva"
        android:layout_toRightOf="@+id/boton_cancelar"
        android:layout_toEndOf="@+id/boton_cancelar" />
</RelativeLayout>




